<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/margin_16dp"
    tools:eventContext="me.anky.scf.ContactUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ministry_centre_banner" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:shadowColor="@android:color/black"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="2"
                android:text="@string/ministry_centre_banner_label"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16dp"
            android:text="@string/ministry_centre_intro"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_8dp"
            android:paddingLeft="@dimen/margin_16dp"
            android:paddingStart="@dimen/margin_16dp"
            android:text="@string/tab_contact_us_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        <include layout="@layout/contact_us_sub_gridlayout" />

        <include layout="@layout/google_map"/>
    </LinearLayout>
</ScrollView>
